// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`History snapshots a few history elements 1`] = `
<span
  class="history-list list"
  enter-active-class="animate__animated animate__fadeIn"
  leave-active-class="animate__animated animate__fadeOut"
  name="list"
  tag="ol"
>
  <li
    class="list-item has-text-left"
  >
    <span
      class="has-text-info"
    >
      mort 
    </span>
     drew
    
    <span
      class="history-card-info"
    >
      4♠️
    </span>
     
    <span
      class="has-text-grey-light"
    >
      in 2 hours
    </span>
  </li>
  <li
    class="list-item has-text-left"
  >
    <span
      class="has-text-info"
    >
      stove 
    </span>
     drew
    
    <span
      class="history-card-info"
    >
      5♥️
    </span>
     
    <span
      class="has-text-grey-light"
    >
      in 2 hours
    </span>
  </li>
</span>
`;

exports[`History snapshots empty list 1`] = `
<span
  class="history-list list"
  enter-active-class="animate__animated animate__fadeIn"
  leave-active-class="animate__animated animate__fadeOut"
  name="list"
  tag="ol"
/>
`;
